--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-widtth,initial-scale=1.0">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Моя игра на JavaScript</title>
 </head>
 <body>
-<h1>OK</h1>
+
+<canvas id="canvas" width="1000" height="600"></canvas>
+<script type="text/javascript" src="script/game.js"></script>
 </body>
 </html>
